<resources>
    <string name="app_name">Kotlin Dicoding Submission 3</string>

    <string name="league_title">League Title</string>
    <string name="next_match">Next Match</string>
    <string name="previous_match">Previous Match</string>
    <string name="home">Home</string>
    <string name="away">Away</string>
    <string name="date_and_time_match">Waktu match : \n%s %s</string>
    <string name="lineup">Lineup</string>
    <string name="favorite">favorite</string>

    <string name="label_league">League</string>
    <string name="label_match">Match</string>
    <string name="label_favorite">Favorite</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="layout_empty_data">Tidak ada data</string>
    <string name="match_title">Match Title</string>
    <string name="please_choose_league">Silahkan pilih liga</string>
    <string name="added_to_previous_match_favorite">Added to previous match favorite</string>
    <string name="added_to_next_match_favorite">Added to next match favorite</string>
    <string name="removed_from_next_match_favorite">Remove from next match favorite</string>
    <string name="removed_from_previous_match_favorite">Removed from previous match favorite</string>
    <string name="colon">:</string>
    <string name="search_input">Search..</string>
    <string name="team">Team</string>
    <string name="played">Played</string>
    <string name="win">Win</string>
    <string name="draw">Draw</string>
    <string name="loss">Loss</string>
    <string name="total">Total</string>
    <string name="standings">Standings</string>
    <string name="teams">Teams</string>
    <string name="search_team">Search team..</string>
    <string name="stadium">Stadium</string>
    <string name="removed_from_favorite">Removed from favorite</string>
    <string name="added_to_favorite">Added to favorite</string>
</resources>
