<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/listLeagueFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/label_league"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/chooseLeagueFragment"
        android:enabled="true"
        android:icon="@drawable/ic_match"
        android:title="@string/label_match"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/favoriteMatchFragment"
        android:enabled="true"
        android:icon="@drawable/ic_star_border_black"
        android:title="@string/label_favorite"
        app:showAsAction="ifRoom" />
</menu>