<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="java.util.List" />
        <import type="com.kucingselfie.kadesubmission.common.Result" />
        <import type="androidx.lifecycle.LiveData"/>
        <import type="com.kucingselfie.kadesubmission.model.DetailMatch" />
        <import type="com.kucingselfie.kadesubmission.api.response.DetailTeam" />
        <variable
            name="model"
            type="com.kucingselfie.kadesubmission.model.DetailMatch" />
        <variable
            name="results"
            type="LiveData&lt;Result&lt;List&lt;DetailMatch>>>" />
    </data>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            tools:context=".ui.detailmatch.DetailMatchFragment">

            <ImageView
                android:id="@+id/homeTeamBadge"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/tvDateEvent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/homeScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@{model.intHomeScore == null ? String.valueOf(0) : model.intHomeScore}"
                android:textColor="@android:color/black"
                android:textSize="48sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/colon"
                app:layout_constraintTop_toBottomOf="@+id/homeTeamBadge"
                tools:text="0" />

            <TextView
                android:id="@+id/colon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/colon"
                android:textColor="@android:color/black"
                android:textSize="48sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/homeTeamBadge"
                tools:text=" : " />

            <TextView
                android:id="@+id/awayScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@{model.intAwayScore == null ? String.valueOf(0) : model.intAwayScore}"
                android:textColor="@android:color/black"
                android:textSize="48sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/colon"
                app:layout_constraintTop_toBottomOf="@+id/awayTeamBadge"
                tools:text="0" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/home"
                android:textSize="@dimen/sp16"
                app:layout_constraintEnd_toStartOf="@+id/include"
                app:layout_constraintStart_toStartOf="@+id/homeTeamBadge"
                app:layout_constraintTop_toBottomOf="@+id/homeScore"
                tools:text="Home" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/away"
                android:textSize="@dimen/sp16"
                app:layout_constraintEnd_toEndOf="@+id/awayTeamBadge"
                app:layout_constraintStart_toEndOf="@+id/include"
                app:layout_constraintTop_toBottomOf="@+id/homeScore" />

            <TextView
                android:id="@+id/homeTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@{model.strHomeTeam}"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp16"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="@+id/homeTeamBadge"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:text="Team" />

            <TextView
                android:id="@+id/awayTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@{model.strAwayTeam}"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp16"
                app:layout_constraintEnd_toEndOf="@+id/awayTeamBadge"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:text="Team" />

            <TextView
                android:id="@+id/tvDateEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@{String.format(@string/date_and_time_match, model.dateEvent, model.strTime)}"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Date Event" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorLight"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/lineup"
                app:layout_constraintEnd_toEndOf="@+id/awayTeam"
                app:layout_constraintStart_toStartOf="@+id/homeTeam"
                app:layout_constraintTop_toBottomOf="@+id/homeTeam" />

            <TextView
                android:id="@+id/homeGK"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@{model.strHomeGK}"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                tools:text="( GK )" />

            <TextView
                android:id="@+id/awayGK"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@{model.strAwayGK}"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                tools:text="( GK )" />

            <TextView
                android:id="@+id/homeFW"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@{model.strHomeFW}"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/homeGK"
                tools:text="( FW )" />

            <TextView
                android:id="@+id/awayFW"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@{model.strAwayFW}"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/awayGK"
                tools:text="( FW )" />

            <TextView
                android:id="@+id/homeMD"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@{model.strHomeMD}"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/homeFW"
                tools:text="( MD )" />

            <TextView
                android:id="@+id/awayMD"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@{model.strAwayMD}"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/awayFW"
                tools:text="( MD )" />

            <TextView
                android:id="@+id/homeDF"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@{model.strHomeDF}"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/homeMD"
                tools:text="( DF )" />

            <TextView
                android:id="@+id/awayDF"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@{model.strAwayDF}"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/awayMD"
                tools:text="( DF )" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="homeGK,homeFW,homeMD,textView7,textView3,homeScore,awayScore,awayDF,homeTeam,homeDF,textView2,tvDateEvent,awayFW,awayGK,awayTeam,homeTeamBadge,awayTeamBadge,awayMD,colon"
                tools:visibility="visible" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <ImageView
                android:id="@+id/awayTeamBadge"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/homeTeamBadge"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/tvDateEvent"
                tools:srcCompat="@tools:sample/avatars" />

            <include
                android:id="@+id/include"
                layout="@layout/loading_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:result="@{(Result) results}" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>